--- a/client/src/Pages/AccountPage/AccountPage.css
+++ b/client/src/Pages/AccountPage/AccountPage.css
@@ -121,3 +121,25 @@
 .password .password-btn:hover {
 	background-color: white;
 }
+
+#google-btn {
+	width: 100%;
+	height: 40px;
+	margin: -7px 0 0px 50px;
+	justify-content: center;
+	display: block;
+	font-size: 1em;
+	font-weight: bold;
+	outline: none;
+	border: none;
+	border-radius: 5px;
+	transition: 0.2s ease-in;
+	cursor: pointer;
+	font-weight: 500;
+}
+
+@media screen and (max-width: 450px) {
+	#google-btn {
+		margin: -7px 0 0px 40px;
+	}
+}
