--- a/client/src/components/ContactList/Header/Header.css
+++ b/client/src/components/ContactList/Header/Header.css
@@ -1,16 +1,20 @@
-.header-container{
-   background-color: #ededed;
-   height: 55px;
-   display: flex;
-   align-items: center;
- 
-   
+.header-container {
+	background-color: #ededed;
+	height: 55px;
+	display: flex;
+	align-items: center;
 }
 
-.header-container img{
-   width: 36px;
-   height: 36px;
-   border-radius: 50%;
-   border-radius: 50%;
-   margin: 0 0 0 15px;
+.header-container img {
+	width: 36px;
+	height: 36px;
+	border-radius: 50%;
+	border-radius: 50%;
+	margin: 0 0 0 15px;
+}
+.header-container h6 {
+	margin: 4px 0 0 15px;
+	letter-spacing: 2px;
+	color: #007f5f;
+	font-weight: 600;
 }
